...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/ET_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/edit_txt_layout"
                android:ems="10"
                android:hint="@string/Address"
                android:padding="10dp"
                android:textColorHint="@color/BLACK" />

            <EditText
                android:id="@+id/ET_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/edit_txt_layout"
                android:ems="10"
                android:hint="@string/City"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5">

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="2"
                    android:background="@drawable/edit_txt_layout"
                    android:ems="10"
                    android:entries="@array/USA_State"
                    android:gravity="start"
                    android:padding="10dp"
                    android:textColorHint="@color/BLACK" />

                <EditText
                    android:id="@+id/ET_zipCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="3"
                    android:background="@drawable/edit_txt_layout"
                    android:ems="10"
...
                    android:padding="10dp"
                    android:textColor="@color/BLACK"
                    android:textColorHint="@color/BLACK" />
            </LinearLayout>

            <EditText
                android:id="@+id/ET_PropertySize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/edit_txt_layout"
                android:ems="10"
                android:hint="@string/Property_Size"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_txt_layout"
                android:visibility="visible">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/CB_clippings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/Clippings"
                    android:textColor="@color/BLACK" />
...
                android:ems="10"
                android:hint="@string/Tools_Availability"
                android:padding="10dp"
                android:textColorHint="@color/BLACK"
                android:enabled="false"/>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/CB_Yes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/Yes"
                android:textColor="@color/BLACK" />
...
                    android:layout_weight="1"
                    android:onClick="ResetAll"
                    android:padding="10dp"
                    android:text="@string/Reset" />

                <Button
                    android:id="@+id/btn_submit"

                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
...
