...
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:endIconMode="clear_text"
        android:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ET_loginEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_txt_layout"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"
...
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:endIconMode="password_toggle"
        android:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ET_loginPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_txt_layout"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"
...
        android:layout_marginLeft="10dp"
        android:layout_gravity="end"
        android:onClick="showPasswordCheck"
        android:text="@string/Show_Password" />
    -->
    <Button
        android:id="@+id/BTN_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        android:onClick="LoginAttempt"
        android:text="@string/Login" />

    <TextView
        android:id="@+id/textView"
        android:text="@string/Do_not_have_an_Account"
        android:textColor="#0000FF"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:onClick="ActivitySignUp"
...
