<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".PropertyOwner"
    android:background="@drawable/bg_gradient">

    <EditText
        android:id="@+id/ET_address"
        android:hint="@string/Address"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/back_with_border"
        android:ems="10"
        android:padding="10dp" />

    <EditText
        android:id="@+id/ET_city"
        android:hint="@string/City"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/back_with_border"
        android:ems="10"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="start"
            android:background="@drawable/back_with_border"
            android:ems="10"
            android:layout_weight="2"
            android:entries="@array/USA_State"
            android:padding="10dp" />

        <EditText
            android:id="@+id/ET_zipCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/back_with_border"
            android:ems="10"
            android:layout_weight="3"
            android:hint="@string/Zipcode"
            android:padding="10dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/ET_PropertySize"
        android:hint="@string/Property_Size"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/back_with_border"
        android:ems="10"
        android:padding="10dp" />

    <EditText
        android:id="@+id/ET_JobType"
        android:hint="@string/Job_Type"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/back_with_border"
        android:ems="10"
        android:padding="10dp" />

    <EditText
        android:id="@+id/ET_Tools"
        android:hint="@string/Tools_Availability"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/back_with_border"
        android:ems="10"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:onClick="Cancel"
            android:text="@string/Cancel" />

        <Button
            android:id="@+id/btn_reset"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:onClick="ResetAll"
            android:text="@string/Reset" />

        <Button
            android:id="@+id/btn_submit"

            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:onClick="PostJob"
            android:text="@string/Submit" />
    </LinearLayout>

</LinearLayout>