...
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <RadioButton
            android:id="@+id/jobSeekerRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Job_Seeker" />

        <RadioButton
...
            android:layout_weight="1"
            android:onClick="ResetAll"
            android:padding="10dp"
            android:text="@string/Reset" />

        <Button
            android:id="@+id/btn_Submit"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:padding="10dp"
...
