<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_jobList"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_jobList" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_map" />

</menu>
